--- a/ss06/ss06_bt1.html
+++ b/ss06/ss06_bt1.html
@@ -1,100 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>CSS</title>
+  <style>
+    * {
+      padding: 0px;
+      margin: 10px;
+    }
+
+    .between {
+      text-align: center;
+    }
+
+    .text_color {
+      color: #4c8fcc;
+    }
+
+    .number {
+      width: 170px;
+      height: 40px;
+      background: #6a5acd;
+      opacity: 0.6;
+      margin: auto;
+    }
+
+    .number p {
+      padding-top: 10px;
+      color: white;
+      font-size: 20px;
+      margin: 0px;
+
+    }
+
+    button {
+      border: none;
+      color: #ffffff;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      background-color: black;
+    }
+  </style>
 </head>
+
 <body>
-   <style>
-    html {
-  font-family: sans-serif;
-  font-size: 16px;
-}
-
-body {
-  background-color: #ffffff;
-  margin: 0;
-  padding: 0;
-}
-
-header {
-  background-color: #000000;
-  height: 50px;
-  padding: 10px;
-}
-
-.logo {
-  float: left;
-  margin-right: 10px;
-}
-
-.title {
-  font-size: 20px;
-  font-weight: bold;
-}
-
-.content {
-  width: 100%;
-  margin: 0 auto;
-}
-
-.section {
-  padding: 20px 0;
-}
-
-.section-title {
-  font-size: 20px;
-  font-weight: bold;
-}
-
-.text {
-  font-size: 16px;
-}
-
-.button {
-  background-color: #000000;
-  color: #ffffff;
-  padding: 10px 20px;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.button:hover {
-  background-color: #00ff00;
-}
-
-@media (max-width: 576px) {
-  header {
-    height: 40px;
-  }
-
-  .logo {
-    float: none;
-    margin: 0 auto;
-  }
-
-  .content {
-    width: 100%;
-    margin: 0;
-  }
-
-  .section {
-    padding: 10px 0;
-  }
-
-  .section-title {
-    font-size: 16px;
-  }
-
-  .text {
-    font-size: 14px;
-  }
-
-  .button {
-    padding: 5px 10px;
-  }
-}
-   </style>
+  <div class="between">
+    <div class="between">
+      <div class="number">
+        <p>190 x 50</p>
+      </div>
+    </div>
+    <h2>Best<span class="text_color">Shared Hosting</span>Company</h2>
+    <p>With this responsive landing page template, you can promote your all hosting, domain and email services</p>
+    <ul>
+      <button type="button">View Plans</button>
+      <button type="button">All Features </button>
+    </ul>
+  </div>
 </body>
+
 </html>
