--- a/ss07/ss07_bt1.html
+++ b/ss07/ss07_bt1.html
@@ -17,7 +17,7 @@
 
         hr {
             width: 100px;
-            border: solid cornflowerblue;
+            border: solid #339999;
         }
 
         .content1 ul li {
