--- a/ss07/ss07_bt1.html
+++ b/ss07/ss07_bt1.html
@@ -93,6 +93,26 @@
             .col-12 {
                 width: 100%;
             }
+
+            @media only screen and (max-width: 700px) {
+                .responsive {
+                    width: 49.99999%;
+                    margin: 6px 0;
+                }
+            }
+
+            @media only screen and (max-width: 500px) {
+                .responsive {
+                    width: 100%;
+                }
+            }
+
+            .responsive {
+                padding: 0 6px;
+                float: left;
+                width: 24.99999%;
+            }
+            
         }
     </style>
 </head>
