--- a/ss07/ss07_bt1.html
+++ b/ss07/ss07_bt1.html
@@ -4,247 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>BT</title>
-    <style>
-        .content1 {
-            text-align: center;
-        }
-
-        .content1 p {
-            font-size: 30px;
-            font-weight: bold;
-            /* text-decoration: underline; */
-        }
-
-        hr {
-            width: 100px;
-            border: solid #339999;
-        }
-
-        .content1 ul li {
-            display: inline;
-            margin: 0 30px;
-
-        }
-
-        .content1 a {
-            text-decoration: none;
-            font-size: 20px;
-            color: black;
-        }
-
-        [class*="col-"] {
-            float: right;
-            text-align: center;
-
-        }
-
-        img {
-            width: 95%;
-            height: 500px;
-            padding-bottom: 20px;
-            border-radius: 10%;
-        }
-
-        @media only screen and (min-width: 768px) {
-            .col-1 {
-                width: 8.33%;
-            }
-
-            .col-2 {
-                width: 16.66%;
-            }
-
-            .col-3 {
-                width: 25%;
-            }
-
-            .col-4 {
-                width: 33.33%;
-            }
-
-            .col-5 {
-                width: 41.66%;
-            }
-
-            .col-6 {
-                width: 50%;
-            }
-
-            .col-7 {
-                width: 58.33%;
-            }
-
-            .col-8 {
-                width: 66.66%;
-            }
-
-            .col-9 {
-                width: 75%;
-            }
-
-            .col-10 {
-                width: 83.33%;
-            }
-
-            .col-11 {
-                width: 91.66%;
-            }
-
-            .col-12 {
-                width: 100%;
-            }
-
-            @media only screen and (min-width: 768px) {
-            .col-1 {
-                width: 8.33%;
-            }
-
-            .col-2 {
-                width: 16.66%;
-            }
-
-            .col-3 {
-                width: 25%;
-            }
-
-            .col-4 {
-                width: 33.33%;
-            }
-
-            .col-5 {
-                width: 41.66%;
-            }
-
-            .col-6 {
-                width: 50%;
-            }
-
-            .col-7 {
-                width: 58.33%;
-            }
-
-            .col-8 {
-                width: 66.66%;
-            }
-
-            .col-9 {
-                width: 75%;
-            }
-
-            .col-10 {
-                width: 83.33%;
-            }
-
-            .col-11 {
-                width: 91.66%;
-            }
-
-            .col-12 {
-                width: 100%;
-            }
-        }
-
-        @media only screen and (min-width: 741px)and (max-width: 1240px) {
-            .col-m-1 {
-                width: 8.33333%;
-            }
-
-            .col-m-2 {
-                width: 16.66667%;
-            }
-
-            .col-m-3 {
-                width: 25%;
-            }
-
-            .col-m-4 {
-                width: 33.33333%;
-            }
-
-            .col-m-5 {
-                width: 41.66667%;
-            }
-
-            .col-m-6 {
-                width: 50%;
-            }
-
-            .col-m-7 {
-                width: 58.33333%;
-            }
-
-            .col-m-8 {
-                width: 66.66667%;
-            }
-
-            .col-m-9 {
-                width: 75%;
-            }
-
-            .col-m-10 {
-                width: 83.33333%;
-            }
-
-            .col-m-11 {
-                width: 91.66667%;
-            }
-
-            .col-m-12 {
-                width: 100%;
-            }
-        }
-
-        @media only screen and (min-width: 1241px) {
-            .col-l-1 {
-                width: 8.33333%;
-            }
-
-            .col-l-2 {
-                width: 16.66667%;
-            }
-
-            .col-l-3 {
-                width: 25%;
-            }
-
-            .col-l-4 {
-                width: 33.33333%;
-            }
-
-            .col-l-5 {
-                width: 41.66667%;
-            }
-
-            .col-l-6 {
-                width: 50%;
-            }
-
-            .col-l-7 {
-                width: 58.33333%;
-            }
-
-            .col-l-8 {
-                width: 66.66667%;
-            }
-
-            .col-l-9 {
-                width: 75%;
-            }
-
-            .col-l-10 {
-                width: 83.33333%;
-            }
-
-            .col-l-11 {
-                width: 91.66667%;
-            }
-
-            .col-l-12 {
-                width: 100%;
-            }
-        }
-        }
-    </style>
+   
+    <link rel="stylesheet" href="css_ss7.css">
 </head>
 
 <body>
