--- a/ss08/ss08_bt1.html
+++ b/ss08/ss08_bt1.html
@@ -13,32 +13,39 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light bg-dark">
-            <a class="navbar-brand" style="color: white; padding-left: 20px">Nền Tảng</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse d-flex flex-row-reverse" id="navbarNav">
-                <table class="navbar-nav">
-                    <tr class="nav-item">
-                        <a class="nav-link disabled" href="#">Dịch vụ</a>
-                    </tr>
-                    <tr class="nav-item">
-                        <a class="nav-link disabled" href="#">Liên hệ</a>
-                    </tr>
-                    <tr class="nav-item">
-                        <a class="nav-link disabled" href="#">Giới Thiệu</a>
-                    </tr>
-                    <tr class="nav-item active">
-                        <a class="nav-link" href="#">Trang chủ</a>
-                    </tr>
-
-                </table>
-            </div>
-        </nav>
-    </header>
+    <div class="container-fluid">
+        <div>
+    
+    
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">Nền Tảng</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="d-flex">
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="#">Trang chủ</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="#">Giới thiệu</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link active" aria-current="page" href="#">Dịch vụ</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link active" aria-current="page" href="#">Liên hệ</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </div>
     <div class="row">
         <div class="col-sm-3">
             <h3>NeTa shop</h3>
@@ -64,18 +71,15 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img style="width: 400px; height: 300px"
-                            src="https://wallpaperaccess.com/full/857421.jpg"
+                        <img style="width: 400px; height: 300px" src="https://wallpaperaccess.com/full/857421.jpg"
                             class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img style="width: 400px; height: 300px"
-                            src="https://wallpaperaccess.com/full/857380.jpg"
+                        <img style="width: 400px; height: 300px" src="https://wallpaperaccess.com/full/857380.jpg"
                             class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img style="width: 400px; height: 300px"
-                            src="https://wallpaperaccess.com/full/857379.jpg"
+                        <img style="width: 400px; height: 300px" src="https://wallpaperaccess.com/full/857379.jpg"
                             class="d-block w-100" alt="...">
                     </div>
                 </div>
@@ -91,8 +95,7 @@
                 </button>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="https://wallpaperaccess.com/full/857383.png"
-                    class="card-img-top" alt="...">
+                <img src="https://wallpaperaccess.com/full/857383.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <h5>$24.99</h5>
@@ -104,8 +107,7 @@
                 </ul>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="https://wallpaperaccess.com/full/857383.png"
-                    class="card-img-top" alt="...">
+                <img src="https://wallpaperaccess.com/full/857383.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <h5>$24.99</h5>
@@ -117,8 +119,7 @@
                 </ul>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="https://wallpaperaccess.com/full/857383.png"
-                    class="card-img-top" alt="...">
+                <img src="https://wallpaperaccess.com/full/857383.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <h5>$24.99</h5>
@@ -130,8 +131,7 @@
                 </ul>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="https://wallpaperaccess.com/full/857383.png"
-                    class="card-img-top" alt="...">
+                <img src="https://wallpaperaccess.com/full/857383.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <h5>$24.99</h5>
@@ -143,8 +143,7 @@
                 </ul>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="https://wallpaperaccess.com/full/857383.png"
-                    class="card-img-top" alt="...">
+                <img src="https://wallpaperaccess.com/full/857383.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <h5>$24.99</h5>
@@ -156,8 +155,7 @@
                 </ul>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="https://wallpaperaccess.com/full/857383.png"
-                    class="card-img-top" alt="...">
+                <img src="https://wallpaperaccess.com/full/857383.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <h5>$24.99</h5>
